integ-tests/tests/snapshots/parser__bad_underscores__double.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ double:1:7
  │
1 │ foo = 0__0
  │       ^^^^ unable to parse number


