integ-tests/tests/snapshots/parser__bad_underscores__trailing2.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ trailing2:1:7
  │
1 │ foo = 1_0_
  │       ^^^^ unable to parse number


